--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ kiwisolver==1.4.2
 langdetect==1.0.9
 matplotlib==3.5.1
 multidict==6.0.2
-mysqlclient==2.1.0
+#mysqlclient==2.1.0
 nltk==3.7
 numpy==1.22.3
 oauthlib==3.2.0
