--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ async-timeout==4.0.2
 attrs==21.4.0
 beautifulsoup4==4.11.1
 bs4==0.0.1
-cchardet==2.1.7
+#cchardet==2.1.7
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
@@ -63,7 +63,7 @@ sqlparse==0.4.2
 threadpoolctl==3.1.0
 tqdm==4.64.0
 tweepy==4.6.0
-twint==2.1.20
+#twint==2.1.20
 tzdata==2022.1
 urllib3==1.26.9
 vaderSentiment==3.3.2
